feature: added security config